--- a/main.html
+++ b/main.html
@@ -3,13 +3,13 @@
 <html>
 
 <head>
-	<div>My current favourite song is neverfold <a herf="https://www.youtube.com/watch?v=DeI30ST-YOA"></div>
+	
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>My current favourite song is never fold</div>
+	<div>My current favourite song is <a herf="https://www.youtube.com/watch?v=DeI30ST-YOA"></a>supreme</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
