--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>My current favourite song is <a herf="https://www.youtube.com/watch?v=DeI30ST-YOA"></a>supreme</div>
+	<div>My current favourite song is <a herf="https://www.youtube.com/watch?v=DeI30ST-YOA">supreme</a></div>
     <script type="text/javascript" src="./script.js">
 </script>
 
