--- a/main.html
+++ b/main.html
@@ -9,8 +9,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>My current favourite song is <a href="https://www.youtube.com/watch?v=DeI30ST-YOA">supreme</a></div>
-    <script type="text/javascript" src="./script.js">
+	<div>
+	<p>My current favourite song is <a href="https://www.youtube.com/watch?v=DeI30ST-YOA">supreme</a></p>
+</div>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
