--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-	<p>My current favourite song is <a href="https://www.youtube.com/watch?v=DeI30ST-YOA">supreme</a></p>
+	<p> <a href="https://www.youtube.com/watch?v=DeI30ST-YOA">My current favourite song is supreme</a></p>
 </div>
 	<script type="text/javascript" src="./script.js">
 </script>
